# sturdy-broccoli

./: .gitignore  CMakeLists.txt  README.md  flake.nix
cmake-modules/: BroccoliModule.cmake
include/: sturdy-broccoli.hpp
src/: sturdy-broccoli.cpp
